24.08.20 handle the Exceptions related to the checking for the duplicate, existence, and validation